<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Signal Analysis Tests</string>
    <string name="main_title">Signal Analysis</string>
    <string name="track_label">Live Signal Map</string>

     <string name="graph_label">Graph</string>
    <string name="settings_label">Settings&#8230;</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    
    <string name="about_title">About This App!</string>
    <string name="about_text">\ This program was written and developed by <a href="http://edgeorgedev.co.uk">Ed George</a> a Computer Science student from the University of Nottingham.
        \n\n\ Thanks to Jonas Gehring for creating the Graph Libraries \n\n\ A Special thanks to Steven Bagley, Matt Sharp, Sam Bradbury and others that helped me create this application \n\n\ For more information please contact Ed G. at <i>psyeg@nottingham.ac.uk</i>
         </string>
         
    <string name="settings_title">Signal Analysis Settings</string>
    <string name="settings_shortcut">s</string>
    
    <string name="st_title">Speed Test</string>
    <string name="db_label">Access Mast Data</string>
    <string name="readJ">Find Masts&#8230;</string>
    <string name="readResult">Database Results</string>
    
    <string name="test_title">Test Title</string>
    <string name="a">On</string>
    <string name="b">Off</string>
    <string name="lbl_speed">Take Speed Test</string>
    <string name="gps_title">Use fine GPS tracking</string>
    <string name="gps_summary">Use more a precise GPS service for tracking</string>
    
    <string name="map_name">Signal Map</string>

</resources>